--- a/frontend/src/app/product-card/product-card.component.html
+++ b/frontend/src/app/product-card/product-card.component.html
@@ -1,11 +1,14 @@
-<div class="card"  routerLink="/product-detail/{{_id}}" method="POST">
-  <img class="card-img-top" name="imgurl" src = {{imgurl}}  >
+<div class="card"   (click) = "onproductdetaill()" method="POST">
+      <router-outlet></router-outlet>
+  <img class="card-img-top" name="imgurl" src = {{product.imgurl}} >
 
    <button (click) ="cart()"  class="btn-black nut-card nut-add"><i class="add-cart"></i></button>
     <div  class="card-body">
-          <p class="card-name" name="name">{{name}} </p>
+          <p class="card-name" name="name">{{product.name}} </p>
           
-          <p  class="card-price" name= "name">{{price}}</p>
-          <p class="old-price">$9.00</p>
+          <p  class="card-price" name= "name">{{product.price}}</p>
+          <p class="old-price">{{product.price + (product.price * 10/100)}}</p>
     </div>
 </div>
+
+
