--- a/frontend/src/app/bs-navbar/bs-navbar.component.css
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.css
@@ -443,6 +443,7 @@ background: transparent;
     width: 100%;
     border: none;
     outline: none;
+    margin-bottom: 10px;
 }
 
 .collapse .search {
