--- a/frontend/src/app/user-order-card/user-order-card.component.html
+++ b/frontend/src/app/user-order-card/user-order-card.component.html
@@ -1,62 +1,128 @@
-<div class="container-fluid" style="padding-bottom: 200px;">
-    <div class="row no-gutters">
-
-        <div class="user-nav" id="user-nav">
-            <ul class="list-group">
-                <li class="headline">
-                    <div class="ava">
-                        <img src="https://i.imgur.com/YgDOOTW.png" alt="" class="img">
+<div class="container">
+    <div class="column">
+        <div class="row order-info">
+            <div class="col">
+                <div class="top">
+                    <div class="bulk" style="flex:1">
+                        <label for="">NUMBER</label>
+                        <P>#KAFHH03OIG </P>
                     </div>
-                    <div class="ten">
-                        <p style="font-size: 13px; font-weight: 600;">ACCOUNT OF</p>
-                        <p id=name>Be Sa </p>
+                    <div class="bulk" style="border-left: 1px solid #e0e0e0; flex:1">
+                        <label for="">DATE</label>
+                        <p>12/12/19</p>
                     </div>
-                </li>
+                </div>
+                <div class="bulk">
+                    <label for="">ORDER STATUS</label>
+                    <p class="s a">Confirmed <span class="tim">12/12/2019 - 12:45AM</span> </p>
+                    <p class="s a">Packed <span class="tim"> 12/12/2019 - 12:50AM</span></p>
+                    <p class="s a">Delivering <span class="tim">12/12/2019 - 1:00AM</span> </p>
+                    <p class="s a">Delivered <span class="tim">12/13/2019 - 12:45AM</span> </p>
+                </div>
 
-                <li class="list-group-item" routerLink="/my/orders"> <span class="far fa-clone"></span>My Orders</li>
-                <li class="list-group-item" routerLink="/my/info"> <span class="far fa-user"></span>My Info </li>
-            </ul>
-        </div>
+            </div>
 
-        <div class="col main-content">
-            <div class="table">
+            <div class="col summary">
+                <div class="bulk"> <label>SUMMARY</label>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            1 x Bulbasaur
+                            <div class="float-right">
+                                $3.99
+                            </div>
+                        </li>
 
-                <h4 class="sa">MY ORDERs</h4>
-                <table>
+                        <li class="list-group-item">
+                            1 x Bulbasaur
+                            <div class="float-right">
+                                $3.99
+                            </div>
+                        </li>
 
-                    <thead>
-                        <tr>
-                            <th style="width: 15%;">Number</th>
-                            <th style="width: 40%;">Summary</th>
-                            <th style="width: 15%;">Date</th>
-                            <th style="width: 10%;">Total</th>
-                            <th style="width: 20%;">Status</th>
-                        </tr>
-                    </thead>
+                        <li class="list-group-item">
+                            1 x Bulbasaur
+                            <div class="float-right">
+                                $3.99
+                            </div>
+                        </li>
 
-                    <tbody>
-                        <tr>
-                            <td> <a data-toggle="modal" data-target="#myModal">TI2004</a> </td>
-                            <td> <p data-toggle="modal" data-target="#myModal">Bulbasaur x 1, Ivysaur X 2, ...</p> </td>
-                            <td>FO, DR</td>
-                            <td>$3.99</td>
-                            <td>Canceled</td>
-                        </tr>
-                    </tbody>
+                        <li class="list-group-item">
+                            1 x Bulbasaur
+                            <div class="float-right">
+                                $3.99
+                            </div>
+                        </li>
 
-                </table>
+                        <li class="list-group-item">
+                            1 x Bulbasaur
+                            <div class="float-right">
+                                $3.99
+                            </div>
+                        </li>
+
+                        <li class="list-group-item dash dashi">
+                            ____
+                        </li>
+
+                        <li class="list-group-item">
+                            Subtotal
+                            <div class="float-right">
+                                $58.00
+                            </div>
+                        </li>
+
+                        <li class="list-group-item fee">
+                            Shipping fee
+                            <div class="float-right">
+                                $1.00
+                            </div>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
+
+            <div class="col ship-to">
+                <div class="bulk">
+                    <label>SHIP TO</label>
+                    <p class="s name">Be Sa</p>
+                    <p class="s phone">0919954179</p>
+                    <p class="s address">KTX khu A - DHQG TpHCM, KP6, Linh Trung, Thu Duc</p>
+
+                </div>
+
+                <div class="bulk" style="border-top: 1px solid #e0e0e0;">
+                    <label>TOTAL</label> <span style="font-size: 10px; margin-top: 5px;" class="float-right">CASH ON
+                        DELIVERY</span>
+                    <h2 class="tien">$30.00</h2>
+                    <p style="font-size: 10px; margin-top: -5px;"> Including 10% VAT and shipping fee</p>
+
+                </div>
+
+
+
             </div>
         </div>
 
+        <div class="row" style="border: none; position: relative;">
+            <div class="col-8"></div>
+            <div class="col-4">
+                <button class="bn" data-toggle="modal" data-target="#myModal2">CANCEL ORDER</button>
+            </div>
+
+        </div>
     </div>
-
-
 
 </div>
 
-<div id="myModal" class="modal">
-    <div class="c">
-        <user-order-card></user-order-card>
-        <button class="fas fa-times" data-dismiss="modal"></button>
+<div id="myModal2" class="modal">
+    <div class="popup">
+        <h5 style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
+            This order will be canceled!</h5>
+        <a class="close" data-dismiss="modal"><i class="fas fa-times"></i></a>
+        <div class="content">
+            <button routerLink="/cancel-order" data-dismiss="modal" class="btnn"></button>
+        </div>
     </div>
 </div>
