--- a/frontend/src/app/bs-navbar/bs-navbar.component.css
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.css
@@ -153,7 +153,7 @@ top: 0px;
     padding-left: 15px;
     font-size: 12px;
     border-radius: 100px;
-    box-shadow: inset 0 0 0 2px var(--den);
+    box-shadow: inset 0 0 0 2px white;
 margin-right: -10px;
 margin-top: -5px;
     transition: 0.2s;
@@ -162,7 +162,7 @@ margin-top: -5px;
 }
 
 .search-button .fa-minus {
-    color: #d93a3a;
+    color: #ffe033;
 }
 
 .cuc input {
@@ -436,19 +436,30 @@ background: transparent;
 
 .collapse {
     width: 100%;
-    transition:0.2s ;
+    background: #242424;
 }
 
-.collapse input {
+.collapse .nav-link {
+    color: white;
     width: 100%;
-    border: none;
-    outline: none;
-    margin-bottom: 10px;
+}
+
+.collapse .nav-link:hover {
+    background: #d93a3a;
 }
 
 .collapse .search {
-    border-bottom: 2px solid var(--den);
     width: 100%;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 40px;
+    margin-top: 15px;
+}
+
+input {
+    padding-left: 10px;
+    padding-right: 5px;
 }
 
 #collapse-search {
@@ -464,7 +475,15 @@ input:focus {
 }
 
 .collapse input{
-    background: white;
+    background:#3f3f3f;
+}
+
+.collapse input:focus{
+    background:#fff;
+}
+
+.collapse-search {
+    height: 70px;
 }
 
 .tiny-search {
@@ -496,10 +515,7 @@ input:focus {
     }
 
     .search-box {
-height: 50px;
-border: 2px solid #242424;
 width: 95%;
-margin-top: 10px;
     }
 
     input[type=search] {
@@ -511,9 +527,9 @@ margin-top: 10px;
     }
 
     .search-button {
-margin-top: 12px;
-margin-right: 5px;
-margin-left: 10px;
+margin-top: 25px;
+margin-right: 0;
+margin-left: 20px;
     }
 
     .log {
@@ -532,12 +548,6 @@ margin-left: 10px;
     line-height: 30px;
         font-size: 16px;
     }
-
-    .collapse-sign {
-        padding-bottom: 20px;
-        padding-right: 20px;
-    }
-
 
 }
 
