--- a/frontend/src/app/bs-navbar/bs-navbar.component.css
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.css
@@ -153,7 +153,7 @@ top: 0px;
     padding-left: 15px;
     font-size: 12px;
     border-radius: 100px;
-    box-shadow: inset 0 0 0 2px white;
+    box-shadow: inset 0 0 0 2px #242424;
 margin-right: -10px;
 margin-top: -5px;
     transition: 0.2s;
@@ -162,8 +162,17 @@ margin-top: -5px;
 }
 
 .search-button .fa-minus {
+    color: #d93a3a;
+}
+
+.collapse .search-button {
+    box-shadow: inset 0 0 0 2px #fff;
+}
+
+.collapse .search-button .fa-minus {
     color: #ffe033;
 }
+
 
 .cuc input {
     border-radius: 0 ;
