--- a/frontend/src/app/bs-navbar/bs-navbar.component.css
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.css
@@ -558,6 +558,11 @@ margin-left: 20px;
         font-size: 16px;
     }
 
+    .user-icon {
+        margin-right: 15px;
+        margin-left: -17px;
+    }
+
 }
 
 
