--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg" style="overflow: hidden;">
+<div class="navbar navbar-expand-lg">
 
   <div class="row">
 
@@ -28,7 +28,7 @@
 
       <div [ngSwitch]="loading" class="log">
 
-        <div *ngSwitchCase="false">
+        <div *ngSwitchCase="true">
 
           <div class="d-flex flex-row " id="big">
             <a class="nav-link" routerLink="/login" style="margin-right: -10px; margin-left: -10px;">Login</a>
@@ -44,7 +44,7 @@
         </div>
 
 
-        <div *ngSwitchCase="true">
+        <div *ngSwitchCase="false">
 
           <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
           <div class="dropdown">
@@ -78,10 +78,7 @@
       
     </div>
   </div>
-
-
-
-
+  
 </div>
 
 <!-- ô search hiện ra khi nhấn zô nút search ở màn hình nhỏ -->
