--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -23,18 +23,15 @@
           <a class="search-button" (click)="onsearch()"> <i class="fas fa-minus"></i> </a>
           <input formControlName="search" name="search" type="search" class="search" placeholder="Search">
         </div>
-
       </form>
 
       <div [ngSwitch]="loading" class="log">
 
         <div *ngSwitchCase="false">
-
           <div class="d-flex flex-row " id="big">
             <a class="nav-link" routerLink="/login" style="margin-right: -10px; margin-left: -10px;">Login</a>
             <a class="nav-link" routerLink="/sign-up">Sign-Up</a>
           </div>
-
           <div class="tiny-sign" id="small" data-toggle="collapse" data-target="#collapse-sign" aria-expanded="false"
             aria-controls="collapse-sign">
             <input type="checkbox">
@@ -43,43 +40,41 @@
 
         </div>
 
-
         <div *ngSwitchCase="true">
 
-          <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
           <div class="dropdown">
+            <!-- phần hiển thị nút user và tên user-->
             <div class="drod-togg">
               <span routerLink="/my/info/{{user._id}}" id="big"
-                style="margin-right: 10px; margin-left: -15px; font-size: 14px;">MY INFO</span>
+                style="margin-right: 10px; margin-left: -10px; font-size: 14px;">{{user.name}}</span>
               <i class="user-icon" style="margin-right: 5px;"></i>
             </div>
 
-            <div class="dropdown-content">
-              <a class="arrow first"></a>
-              <a class="dropdo" routerLink="/my/info/{{user._id}}" id="small">My Info</a>
-              <a class="dropdo" routerLink="/my/orders">My Orders</a>
-              <a class="dropdo" routerLink="/admin/orders">Manage Orders</a>
-              <a class="dropdo" routerLink="/admin/products">Manage Products</a>
+            <div class="dropdown-content" (ngOninit)="ngOninit()" [ngSwitch]="inadmin">
+              <a class="arrow "></a>
+              <a class="dropdo first" routerLink="/my/info/{{user._id}}" id="small">My Info</a>
+              <a *ngSwitchCase="false" class="dropdo" routerLink="/my/orders">My Orders</a>
+              <a *ngSwitchCase="true" class="dropdo" routerLink="/admin/orders">Manage Orders</a>
+              <a *ngSwitchCase="true" class="dropdo" routerLink="/admin/products">Manage Products</a>
               <a class="dropdo logout" (click)="logout()">Log Out</a>
             </div>
+
           </div>
+
         </div>
 
       </div>
 
       <a class="nav-link cucu" routerLink="/shopping-cart">
         <div class="cart">
-          <button (click)="onsetcard()" class="shopping-cart">
-            <span class="cart-status">0</span>
-            <span class="cart-status-2">0</span>
-          </button>
+          <button (click)="onsetcard()" class="shopping-cart"> </button>
         </div>
       </a>
-      
     </div>
+    
   </div>
-  
 </div>
+
 
 <!-- ô search hiện ra khi nhấn zô nút search ở màn hình nhỏ -->
 <div class="collapse collapse-search" id="collapse-search">
@@ -88,7 +83,6 @@
       <input formControlName="search" name="search" type="search" class="search" placeholder="Search">
       <a class="search-button" (click)="onsearch()"> <i class="fas fa-minus"></i> </a>
     </div>
-
   </form>
 </div>
 
