--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,8 +14,8 @@
 <footer>
     <div class="container" >
         <h5><i class="fa fa-heart" style="color: #d93a3a;"></i></h5> 
-        <div class="co"><p> 
-        Do an Lap trinh Ung dung mang | 2019 |</p> &nbsp; <a href="https://daa.uit.edu.vn/">UIT</a></div>
+        <div class="co"><p>     &copy; 2019-2020 | <a href="">VCLTEAM</a> |
+        Do an Lap trinh Ung dung mang | </p> &nbsp; <a href="https://daa.uit.edu.vn/">UIT</a></div>
     
 </div>
 </footer>
