--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-lg">
 
-  <div class="row">
+  <div class="row no-gutters">
 
     <div class="column">
       <a class="navbar-brand" routerLink="/">
