--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -27,8 +27,8 @@
 
         <div *ngSwitchCase="false">
           <div class="d-flex flex-row " id="big">
-            <a class="nav-link" routerLink="/login" style="margin-right: -10px; margin-left: -10px;">Login</a>
-            <a class="nav-link" routerLink="/sign-up">Sign-Up</a>
+            <a class="nav-link" routerLink="/login" style="margin-left: 5px; margin-right: 10px;">Login</a>
+            <a class="nav-link" routerLink="/sign-up" style="margin-right: 15px">Sign-Up</a>
           </div>
           <div class="tiny-sign" id="small" data-toggle="collapse" data-target="#collapse-sign" aria-expanded="false"
             aria-controls="collapse-sign">
