--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -1,13 +1,11 @@
-<div class="container-fluid">
+<div class="container-fluid" (ngOninit)="ngOninit()">
 
     <ul class="breadcrumb">
         <button class="back" onclick="history.go(-1)">BACK</button>
         <li><a href="#">Home</a></li>
-        <li><a routerLink="/category" href="#">Grass</a></li>
+        <li><a routerLink="/category">Grass</a></li>
         <li>Bulbasaur</li>
     </ul>
-<<<<<<< HEAD
-
 
     <div class="row no-gutters">
         <div class="col">
@@ -15,85 +13,41 @@
 
                 <h2 class="cat-name">GRASS <span class="remaining-products">(23 products)</span> </h2>
 
-                <div class="view product-view">
+                <div class="view product-view" *ngIf='p'>
 
                     <div class="image">
-                        <img src="https://cdn140.picsart.com/265075338006212.png?r1024x1024" alt="Product-image" style="width: 100%;">
+                        <img src={{p.imgurl}} alt="Product-image" style="width: 95%;">
                     </div>
 
                     <div class="product-info">
-                        <p class="product-number">#001</p>
-                        <h2 class="product-name">Bulbasaur</h2>
-                        <h6 class="type1">Grass 
-                            <span class="type2">Poison</span> 
-                        </h6>
-                        <div class="price-area">
-                        <h2 class="product-price">$5.00</h2>
-                        <p class="old-price" > $9.00</p>
-                    </div>
+                        <p class="product-number">{{p.id}}</p>
+                        <h2 class="product-name">{{p.name}}</h2>
+                        <h6 class="type1">Grass <span>/ Poison</span> </h6>
+                        <h2 class="product-price">{{p.price}}</h2>
+                        <p class="old-price">{{p.price + (p.price * 10/100)}}</p>
                         <div class="product-quantity">
-                            <product-quantity></product-quantity>
+                            <product-quantity
+                            [Counter] = "counter"
+                            [id] = "id"
+                            [flag] = "flag"
+                            (valueChange2)="notifyMessage($event)"
+                            (valueChange3)="notifyMessage1($event)">
+                            </product-quantity
+                            >
                         </div>
-                        <button class="btn add-to-cart-btn"></button>
+                        <button class="btn add-to-cart-btn"  (click) = "addtocard()"></button>
                     </div>
                 </div>
 
-                <div class="box-view description">
+                <div class="box-view description"  *ngIf='p'>
                     <h4 class="headline"> DESCRIPTION</h4>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim tenetur, qui ut nesciunt culpa iure dignissimos facere dolorum possimus dolores voluptates optio, exercitationem magnam at eius corrupti vel pariatur. Cumque quidem ex suscipit assumenda libero ipsa iure et maiores tempore ullam fugiat autem nemo dolorum, rem officiis similique quibusdam, consequuntur fugit! Voluptate, voluptates. Illum molestiae fuga nesciunt nam soluta eligendi magni tenetur natus veritatis delectus, assumenda nemo quisquam deleniti blanditiis, quam est ad aliquid itaque voluptatem provident perferendis eveniet id quaerat maxime. Sint, incidunt architecto ipsa tenetur soluta fugit iusto doloremque vitae sapiente, a, quod sit eaque deserunt velit!</p>
-=======
-    <h2 class="cat-name">GRASS <span class="remaining-products">(23 products)</span> </h2>
-
-    <div class="row no-gutters" style="margin-top: 20px;">
- <div class="col">
-            <div class="detail">
-                <div class="row no-gutters no r-in">
-        <div class="col col-2">
-            <div class="category">
-                <product-filter></product-filter>
-            </div>
-        </div>
-
-        <div class="col col-10">
-            <div class="detail" (ngOninit)="ngOninit()" >
-               
-                <div class="row no-gutters no r-in"  *ngIf='product'>
-                    <div class="col-5 image">
-                        <img src={{product.imgurl}} alt="Product-image"
-                            style="width: 100%;">
-                    </div>
-                    <div class="col-7" style="padding-left: 50px; padding-top: 30px;">
-                        <p>{{product.id}}</p>
-                        <h2>{{product.name}}</h2>
-                        <h6>Grass <span>/ Poison</span> </h6>
-                        <h2 style="font-weight: 600; color: #d93a3a;">{{product.price}}</h2>
-                        <p style="text-decoration: line-through; opacity: 0.5"> $9.00</p>
-                        <div style="margin-top: 50px; width: 100px;">
-                            <product-quantity></product-quantity>
-                        </div>
-                        <button class="btn"  routerLink="/shopping-cart"></button>
-                    </div>
-                </div>
-                <h4 class=" headtype">Description</h4>
-                <div class="row no-gutters r-in">
-                    <div class="conbo">
-                        <p>Height : </p>
-                        <p>Weight : </p>
-                        <p>Moves : </p>
-                        <p>Abilities : </p>
-                        <p>Japanese name : </p>
-                        <p>Weak to : </p>
-                    </div>
->>>>>>> 8cd9634af444d6e3907af30d4ab4ba532e82aeaf
+                  <p>{{p.description}}</p>
                 </div>
 
                 <div class="box-view related-products">
                     <h4 class="headline"> RELATED PRODUCTs</h4>
                     <div class="prod">
-                        <product-card></product-card>
-                        <product-card></product-card>
-                        <product-card></product-card>
-                        <product-card></product-card>
+                        <product-card *ngFor="let product of products" [product]="product"></product-card>
                     </div>
                 </div>
 
